--- a/devel/p5-Storable/Makefile
+++ b/devel/p5-Storable/Makefile
@@ -3,7 +3,7 @@
 # Date created:				July 7th 1997
 # Whom:	      				James FitzGibbon <jfitz@FreeBSD.org>
 #
-# $Id: Makefile,v 1.2 1998/02/18 15:24:00 vanilla Exp $
+# $Id: Makefile,v 1.3 1998/04/11 14:10:36 vanilla Exp $
 #
 
 DISTNAME=	Storable-0.5@4
@@ -13,6 +13,8 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN}
 MASTER_SITE_SUBDIR=	Storable
 
 MAINTAINER=	jfitz@FreeBSD.ORG
+
+BROKEN=		fetch
 
 USE_PERL5=	YES
 
