--- a/x11-fm/workplace/Makefile
+++ b/x11-fm/workplace/Makefile
@@ -1,24 +1,25 @@
 # New ports collection makefile for:	workplace
-# Version required:			1.0a1
+# Version required:			1.0a3
 # Date created:				7 March 1998
 # Whom:					Andrey Zakhvatov
 #
-# $Id: Makefile,v 1.1.1.1 1998/03/27 14:29:36 tg Exp $
+# $Id: Makefile,v 1.2 1998/03/28 22:18:38 asami Exp $
 #
 
-DISTNAME=	workplace-1.0.a1
-PKGNAME=	workplace-1.0a1
+DISTNAME=	workplace-1.0.a3
+PKGNAME=	workplace-1.0a3
 CATEGORIES=	x11
-MASTER_SITES=	http://www2.osk.3web.ne.jp/~hideki70/
+MASTER_SITES=	http://www2.osk.3web.ne.jp/~hideki70/src/
 
 MAINTAINER=	andy@icc.surw.chel.su
 
 LIB_DEPENDS=	gtk\\.1\\.:${PORTSDIR}/x11/gtk
 
-BROKEN=		build
-
 GNU_CONFIGURE=	yes
 USE_X11=	yes
+
+pre-configure:
+	@ ${RM} ${WRKSRC}/config.cache
 
 do-install:
 	@ ${INSTALL_PROGRAM} ${WRKSRC}/src/workplace ${PREFIX}/bin
@@ -29,7 +30,6 @@ do-install:
 	@ ${INSTALL_DATA} ${WRKSRC}/${file} ${PREFIX}/share/doc/workplace
 .endfor
 	@ ${MKDIR} ${PREFIX}/share/examples/workplace
-	@ ${INSTALL_DATA} ${WRKSRC}/WPPref ${PREFIX}/share/examples/workplace/WPPref.sample
-	@ ${INSTALL_DATA} ${WRKSRC}/WPSuffix ${PREFIX}/share/examples/workplace/WPSuffix.sample
+	@ ${INSTALL_DATA} ${WRKSRC}/example/* ${PREFIX}/share/examples/workplace
 
 .include <bsd.port.mk>
